Aufgaben 1 und 2 bearbeitet und gelöst.

--- a/ModSim WS1718 Uebung 03.ipynb
+++ b/ModSim WS1718 Uebung 03.ipynb
@@ -99,12 +99,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2251799813685248"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2**51"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,12 +128,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.30000000000000004\n",
+      "0.3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print (1.3-1.0)\n",
+    "print (0.3)\n",
+    "(1.3-1.0)==0.3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Der Wahrheitsweit der Aussage ist falsch. Nach dem Berechnungsprinzip werden die Gleitkommazahlen, vor allem die Nachkommastellen, durch Bruchteile berechnet und dargestellt. Somit lassen sich die Nachkommastellen nicht 100%ig richtig darstellen. Demgegenüber ist 0.3 ein präziser Wert, weil wir ihn als solchen definiert haben."
+   ]
   }
  ],
  "metadata": {
